# Soundex

./: CMakeLists.txt  LICENSE  README.md  Soundex.cpp  Soundex.h  main.cpp
soundex_table/: Global.h  ISoundexTable.h  SoundexTableFactory.hpp
soundex_table/lang/: Cyrillic.cpp  Cyrillic.h  Latin.cpp  Latin.h
